--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,7 +101,7 @@ ul {
   .p-datatable-tbody > tr > td {
     padding: 0.625rem 1rem;
     font-size: 0.875rem;
-    border-bottom: 1px solid #f3f4f6;
+    border-bottom: 1px solid var(--color-border);
     vertical-align: middle;
   }
 
